# KView

./: CHANGELOG.md  CMakeLists.txt  README.md  kview
src/: FileHandler.cpp  FileHandler.h  Main.qml  main.cpp
